--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@ h2 {
     text-align: center;
 }
 header{
-    text-align: center;
+    display: flex;
+    /* justify-content: center; */
+    /* position: relative; */
+    /* text-align: center; */
+
     outline-style: dotted;
     outline-width: 6px;
     outline-color: black;
@@ -87,6 +91,11 @@ a:hover {
 }
 
 
+.center{
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+}
 
 .banana{
     color: yellow;
@@ -95,4 +104,10 @@ a:hover {
 .NIE{
     color: red;
     text-shadow: 2px 0 0 #000, 0 -2px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+.openNavButton{
+    background-color: rgba(105, 150, 50, 0.7);
+    border-style: dotted;
+    border-color: black;
+    font-size: 30px;
 }
